fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -179,7 +179,7 @@
   "currently viewing": "obecnie wyświetlasz",
   "previously edited": "poprzednio edytowane",
   "You": "Ty",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Awatar użytkownika {{ name }}",
   "Viewers": "Oglądający",
   "Collections are used to group documents and choose permissions": "Kolekcje służą do grupowania dokumentów i wybierania uprawnień",
   "Name": "Nazwa",
@@ -285,7 +285,7 @@
   "You will receive an email when it's complete.": "Po zakończeniu otrzymasz wiadomość e-mail.",
   "Include attachments": "Dołącz załączniki",
   "Including uploaded images and files in the exported data": "Uwzględnianie przesłanych obrazów i plików w eksportowanych danych",
-  "Include private collections": "Include private collections",
+  "Include private collections": "Dołącz prywatne kolekcje",
   "{{count}} more user": "{{count}} więcej użytkownika",
   "{{count}} more user_plural": "{{count}} więcej użytkowników",
   "Filter options": "Opcje filtrowania",
@@ -321,7 +321,7 @@
   "Change Language": "Zmień język",
   "Dismiss": "Odrzuć",
   "Unable to download image": "Nie można pobrać obrazu",
-  "Lightbox": "Lightbox",
+  "Lightbox": "Okno modalne",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Powiększ",
   "Zoom out": "Pomniejsz",
@@ -373,8 +373,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Wyłącz to ustawienie, aby zniechęcać wyszukiwarki do indeksowania strony",
   "Show last modified": "Pokaż ostatnio zmodyfikowane",
   "Display the last modified timestamp on the shared page": "Wyświetl ostatnio zmodyfikowany znacznik czasu na wspólnej stronie",
-  "Show table of contents": "Show table of contents",
-  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
+  "Show table of contents": "Pokaż spis treści",
+  "Display the table of contents on documents by default": "Domyślnie wyświetlaj spis treści w dokumentach",
   "All documents in this collection will be shared on the web, including any new documents added later": "Wszystkie dokumenty w tej kolekcji będą udostępniane w sieci, w tym wszelkie nowe dokumenty dodane później",
   "Invite": "Zaproś",
   "{{ userName }} was added to the collection": "{{ userName }} został dodany do kolekcji",
@@ -422,7 +422,7 @@
   "Archived collections": "Zarchiwizowane kolekcje",
   "New doc": "Nowy dok",
   "Empty": "Pusty",
-  "No collections": "No collections",
+  "No collections": "Brak kolekcji",
   "Collapse": "Zwiń",
   "Expand": "Rozwiń",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument nie jest obsługiwany – spróbuj formatu Markdown, zwykłego tekstu, HTML lub Word",
@@ -432,7 +432,7 @@
   "Could not load shared documents": "Nie można załadować udostępnionych dokumentów",
   "Shared with me": "Udostępnione mi",
   "Show more": "Pokaż więcej",
-  "Link options": "Link options",
+  "Link options": "Opcje linku",
   "Could not load starred documents": "Nie udało się załadować dokumentów oznaczonych gwiazdką",
   "Starred": "Oznaczone gwiazdką",
   "Up to date": "Aktualne",
@@ -476,9 +476,9 @@
   "Replacement": "Zastąpienie",
   "Replace": "Zamień",
   "Replace all": "Zamień wszystko",
-  "Image width": "Image width",
+  "Image width": "Szerokość obrazu",
   "Width": "Szerokość",
-  "Image height": "Image height",
+  "Image height": "Wysokość obrazu",
   "Height": "Wysokość",
   "Profile picture": "Zdjęcie profilowe",
   "Create a new doc": "Utwórz nowy dokument",
@@ -487,7 +487,7 @@
   "Keep as link": "Zachowaj jako link",
   "Mention": "Wzmianka",
   "Embed": "Osadzenie",
-  "More options": "More options",
+  "More options": "Więcej opcji",
   "Rename": "Zmień nazwę",
   "Insert after": "Wstaw po",
   "Insert before": "Wstaw przed",
@@ -693,7 +693,7 @@
   "Too many users connected to document": "Zbyt wielu użytkowników podłączonych do dokumentu",
   "Your edits will sync once other users leave the document": "Twoje zmiany będą synchronizowane po opuszczeniu dokumentu przez innych użytkowników",
   "New version available": "Dostępna nowa wersja",
-  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
+  "Please reload the page to update to the latest version": "Odśwież stronę, aby zaktualizować do najnowszej wersji",
   "Server connection lost": "Utracono połączenie z serwerem",
   "Edits you make will sync once you’re online": "Wprowadzone przez Ciebie zmiany zostaną zsynchronizowane, gdy będziesz online",
   "Offline": "Tryb offline",
@@ -783,7 +783,7 @@
   "You haven’t created any documents yet": "Nie utworzyłeś jeszcze żadnych dokumentów",
   "Documents you’ve recently viewed will be here for easy access": "Tutaj będą dostępne dokumenty, które ostatnio przeglądałeś",
   "{{ count }} invites sent": "Wysłano {{ count }} zaproszeń",
-  "{{ count }} invites sent_plural": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "Wysłano {{ count }} zaproszeń",
   "Those email addresses are already invited": "Te adresy e-mail już zostały zaproszone",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Przepraszamy, można wysłać tylko {{MAX_INVITES}} zaproszeń na raz",
   "Invited {{roleName}} will receive access to": "Zaproszony {{roleName}} otrzyma dostęp do",
@@ -1213,76 +1213,76 @@
   "Expires today": "Wygasa dzisiaj",
   "Expires tomorrow": "Wygasa jutro",
   "Expires {{ date }}": "Wygasa {{ date }}",
-  "New attribute": "New attribute",
-  "Paper size": "Paper size",
-  "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
-  "Are you sure you want to delete?": "Are you sure you want to delete?",
-  "Deleting this version of the document will permanently and irrevocably remove it from the history.": "Deleting this version of the document will permanently and irrevocably remove it from the history.",
+  "New attribute": "Nowy atrybut",
+  "Paper size": "Format papieru",
+  "Ask AI \"{{question}}\"": "Zapytaj AI \"{{question}}\"",
+  "Are you sure you want to delete?": "Czy na pewno chcesz usunąć?",
+  "Deleting this version of the document will permanently and irrevocably remove it from the history.": "Usunięcie tej wersji dokumentu spowoduje trwałe i nieodwołalne usunięcie jej z historii.",
   "Format": "Format",
-  "Add option": "Add option",
-  "Optional": "Optional",
-  "Choose a size for your exported document": "Choose a size for your exported document",
-  "Revision renamed": "Revision renamed",
-  "Failed to save revision": "Failed to save revision",
-  "Invite to document": "Invite to document",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
-  "Data Attributes": "Data Attributes",
-  "Edit attribute": "Edit attribute",
+  "Add option": "Dodaj opcję",
+  "Optional": "Opcjonalnie",
+  "Choose a size for your exported document": "Wybierz rozmiar dla eksportowanego dokumentu",
+  "Revision renamed": "Zmieniono nazwę wersji",
+  "Failed to save revision": "Nie udało się zapisać wersji",
+  "Invite to document": "Zaproś do dokumentu",
+  "Sorry, invalid embed link": "Niepoprawny link osadzenia",
+  "Data Attributes": "Atrybuty danych",
+  "Edit attribute": "Edytuj atrybut",
   "Property": "Property",
-  "Yes": "Yes",
-  "No": "No",
-  "Search or ask a question": "Search or ask a question",
+  "Yes": "Tak",
+  "No": "Nie",
+  "Search or ask a question": "Wyszukaj lub zadaj pytanie",
   "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.",
   "Can view only what is explicitly shared": "Can view only what is explicitly shared",
   "SAML assertion was invalid or missing fields, please check your configuration": "SAML assertion was invalid or missing fields, please check your configuration",
   "AI generated answer based on related documents in your workspace": "AI generated answer based on related documents in your workspace",
   "References": "References",
-  "Enable AI answers to get direct answers to searched questions.": "Enable AI answers to get direct answers to searched questions.",
-  "Go to settings": "Go to settings",
-  "Where do I find the file?": "Where do I find the file?",
+  "Enable AI answers to get direct answers to searched questions.": "Włącz odpowiedzi AI, aby uzyskać odpowiedzi na wyszukiwane pytania.",
+  "Go to settings": "Przejdź do ustawień",
+  "Where do I find the file?": "Gdzie znajdę plik?",
   "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
-  "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Drag and drop the zip file from Confluence's HTML export option, or click to upload",
-  "Guests": "Guests",
-  "New Attribute": "New Attribute",
+  "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Przeciągnij i upuść plik zip z opcji eksportu HTML w Confluence lub kliknij, aby wybrać plik do przesłania",
+  "Guests": "Goście",
+  "New Attribute": "Nowy atrybut",
   "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.",
   "Custom domain": "Własna domena",
   "AI answers": "Odpowiedzi AI",
-  "Use AI to directly answer searched questions using content in your workspace.": "Use AI to directly answer searched questions using content in your workspace.",
-  "API access": "API access",
-  "Allow members to create API keys for programmatic access": "Allow members to create API keys for programmatic access",
-  "Public document embedding": "Public document embedding",
-  "When enabled, publicly shared documents can be embedded in third-party websites": "When enabled, publicly shared documents can be embedded in third-party websites",
-  "Include previews in emails": "Include previews in emails",
-  "When enabled, email notifications will include content previews": "When enabled, email notifications will include content previews",
+  "Use AI to directly answer searched questions using content in your workspace.": "Użyj sztucznej inteligencji, aby odpowiadać na pytania, korzystając z treści w Twoim obszarze roboczym.",
+  "API access": "Dostęp do API",
+  "Allow members to create API keys for programmatic access": "Zezwól członkom na tworzenie kluczy dostępu do API",
+  "Public document embedding": "Publiczne osadzanie dokumentu",
+  "When enabled, publicly shared documents can be embedded in third-party websites": "Gdy włączone, publicznie udostępniane dokumenty mogą być osadzone w witrynach zewnętrznych",
+  "Include previews in emails": "Dołączaj miniatury w wiadomościach e-mail",
+  "When enabled, email notifications will include content previews": "Gdy ta opcja jest włączona, powiadomienia e-mail będą zawierać podglądy treści",
   "Boolean": "Boolean",
-  "Number": "Number",
-  "Text": "Text",
-  "List": "List",
-  "Could not load events": "Could not load events",
-  "Audit Log": "Audit Log",
-  "The audit log details the history of security related and other events across your knowledge base.": "The audit log details the history of security related and other events across your knowledge base.",
-  "IP address": "IP address",
-  "Actor": "Actor",
-  "Event": "Event",
-  "Timestamp": "Timestamp",
-  "IP": "IP",
+  "Number": "Liczba",
+  "Text": "Tekst",
+  "List": "Lista",
+  "Could not load events": "Nie można załadować zdarzeń",
+  "Audit Log": "Dziennik Zdarzeń",
+  "The audit log details the history of security related and other events across your knowledge base.": "Dziennik Zdarzeń zawiera szczegóły historii zdarzeń związanych z bezpieczeństwem i innych zdarzeń w bazie wiedzy.",
+  "IP address": "Adres IP",
+  "Actor": "Aktor",
+  "Event": "Zdarzenie",
+  "Timestamp": "Znacznik czasu",
+  "IP": "Adres IP",
   "a group": "a group",
   "All users": "All users",
   "Private": "Private",
-  "View and edit": "View and edit",
-  "Sharing enabled": "Sharing enabled",
-  "Date archived": "Date archived",
-  "Could not load collections": "Could not load collections",
+  "View and edit": "Podgląd i edycja",
+  "Sharing enabled": "Udostępnianie włączone",
+  "Date archived": "Data archiwizacji",
+  "Could not load collections": "Nie można załadować kolekcji",
   "Manage the permissions and settings of all collections in the knowledge base. As a workspace admin you can also administer private collections.": "Manage the permissions and settings of all collections in the knowledge base. As a workspace admin you can also administer private collections.",
   "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.": "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.",
-  "API Endpoint": "API Endpoint",
-  "API Secret": "API Secret",
-  "Datasource": "Datasource",
+  "API Endpoint": "Adres API",
+  "API Secret": "Sekret API",
+  "Datasource": "Źródło danych",
   "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.": "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.",
   "Sorry, an answer could not be found in the collection, try widening your search.": "Sorry, an answer could not be found in the collection, try widening your search.",
   "Sorry, an answer could not be found in the workspace, try widening your search.": "Sorry, an answer could not be found in the workspace, try widening your search.",
-  "Looking for answers": "Looking for answers",
-  "Answer to \"{{ query }}\"": "Answer to \"{{ query }}\"",
+  "Looking for answers": "Szukam odpowiedzi",
+  "Answer to \"{{ query }}\"": "Odpowiedź na \"{{ query }}\"",
   "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?": "Ups, musisz zaakceptować uprawnienia w Slack, aby połączyć {{appName}} z Twoim obszarem roboczym. Spróbować ponownie?",
   "Something went wrong while authenticating your request. Please try logging in again.": "Coś poszło nie tak podczas uwierzytelniania Twojego żądania. Proszę spróbuj zalogować się ponownie.",
   "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.": "Właściciel konta GitHub został poproszony o zainstalowanie aplikacji {{githubAppName}} GitHub. Po zatwierdzeniu podglądy zostaną wyświetlone dla odpowiednich linków.",
@@ -1363,7 +1363,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} zaktualizował {{ timeAgo }}",
   "You created {{ timeAgo }}": "Utworzyłeś {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} utworzył {{ timeAgo }}",
-  "Caption": "Caption",
-  "Open": "Open",
+  "Caption": "Podpis",
+  "Open": "Otwórz",
   "Error loading data": "Błąd ładowania danych"
 }
