--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -899,11 +899,11 @@
   "An error occurred": "An error occurred",
   "The OAuth client could not be found, please check the provided client ID": "The OAuth client could not be found, please check the provided client ID",
   "The OAuth client could not be loaded, please check the redirect URI is valid": "The OAuth client could not be loaded, please check the redirect URI is valid",
-  "Required OAuth parameters are missing": "Required OAuth parameters are missing",
+  "Required OAuth parameters are missing": "",
   "Authorize": "Authorize",
   "{{ appName }} wants to access {{ teamName }}": "{{ appName }} wants to access {{ teamName }}",
   "By <em>{{ developerName }}</em>": "By <em>{{ developerName }}</em>",
-  "{{ appName }} will be able to access your account and perform the following actions": "{{ appName }} will be able to access your account and perform the following actions",
+  "{{ appName }} will be able to access your account and perform the following actions": "",
   "read": "read",
   "write": "write",
   "read and write": "read and write",
