fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -374,51 +374,51 @@
   "Show last modified": "نمایش آخرین ویرایش",
   "Display the last modified timestamp on the shared page": "User Rate Limit Exceeded",
   "Show table of contents": "نمایش فهرست مطالب",
-  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
-  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
+  "Display the table of contents on documents by default": "نمایش فهرست مطالب به‌طور پیش‌فرض در اسناد",
+  "All documents in this collection will be shared on the web, including any new documents added later": "تمام اسناد در این مجموعه به‌طور آنلاین به اشتراک گذاشته خواهند شد، از جمله هر سند جدیدی که بعداً اضافه شود",
   "Invite": "دعوت",
   "{{ userName }} was added to the collection": "{{ userName }} به مجموعه اضافه شد",
   "{{ count }} people added to the collection": "{{ count }} به مجموعه اضافه شد",
   "{{ count }} people added to the collection_plural": "{{ count }} به مجموعه اضافه شد",
-  "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} people and {{ count2 }} groups added to the collection",
-  "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} people and {{ count2 }} groups added to the collection",
+  "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} نفر و {{ count2 }} گروه به مجموعه اضافه شدند",
+  "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} نفر و {{ count2 }} گروه به مجموعه اضافه شدند",
   "Switch to dark": "تغییر به تیره",
   "Switch to light": "تغییر به روشن",
   "Add": "افزودن",
-  "Add or invite": "Add or invite",
+  "Add or invite": "افزودن یا دعوت",
   "Viewer": "ناظر",
   "Editor": "ویرایشگر",
-  "Suggestions for invitation": "Suggestions for invitation",
+  "Suggestions for invitation": "پیشنهادها برای دعوت",
   "No matches": "موردی یافت نشد",
   "Can view": "می‌توان مشاهده کرد",
   "Everyone in the collection": "تمامی افراد در مجموعه",
   "You have full access": "شما دسترسی کامل دارید",
-  "Created the document": "Created the document",
+  "Created the document": "سند ایجاد شد",
   "Other people": "دیگر افراد",
-  "Other workspace members may have access": "Other workspace members may have access",
-  "This document may be shared with more workspace members through a parent document or collection you do not have access to": "This document may be shared with more workspace members through a parent document or collection you do not have access to",
-  "Access inherited from collection": "Access inherited from collection",
-  "{{ userName }} was removed from the document": "{{ userName }} was removed from the document",
+  "Other workspace members may have access": "سایر اعضای فضای کار ممکن است دسترسی داشته باشند",
+  "This document may be shared with more workspace members through a parent document or collection you do not have access to": "این سند ممکن است از طریق یک سند یا مجموعه‌ی بالادستی که شما به آن دسترسی ندارید، با اعضای بیشتری از محیط کاری به اشتراک گذاشته شده باشد",
+  "Access inherited from collection": "دسترسی از مجموعه‌ی بالادستی گرفته شده است",
+  "{{ userName }} was removed from the document": "{{ userName }} از سند حذف شد",
   "Could not remove user": "امکان حذف کاربر وجود نداشت",
-  "Permissions for {{ userName }} updated": "Permissions for {{ userName }} updated",
+  "Permissions for {{ userName }} updated": "دسترسی‌های {{ userName }} به‌روزرسانی شد",
   "Could not update user": "امکان به‌روزرسانی کاربر وجود نداشت",
-  "Has access through <2>parent</2>": "Has access through <2>parent</2>",
+  "Has access through <2>parent</2>": "از طریق <2>سند بالادستی</2> دسترسی دارد",
   "Suspended": "معلق",
   "Invited": "دعوت شده",
   "Active <1></1> ago": "فعال در <1></1> پیش",
   "Never signed in": "تاکنون وارد نشده است",
   "Leave": "خروج",
-  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
-  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
-  "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future",
-  "{{ userName }} was added to the document": "{{ userName }} was added to the document",
-  "{{ count }} people added to the document": "{{ count }} people added to the document",
-  "{{ count }} people added to the document_plural": "{{ count }} people added to the document",
-  "{{ count }} groups added to the document": "{{ count }} groups added to the document",
-  "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "هر کسی با لینک می‌تواند دسترسی داشته باشد، زیرا مجموعهٔ <2>{sharedParent.sourceTitle}</2> به اشتراک گذاشته شده است",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "هرکسی که لینک را داشته باشد می‌تواند دسترسی پیدا کند، چون سند بالادستی <2>{sharedParent.sourceTitle}</2> به اشتراک گذاشته شده است",
+  "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "اسناد زیرسند در حال حاضر روی وب به‌اشتراک گذاشته نمی‌شوند. برای دادن دسترسی، گزینه‌ی اشتراک‌گذاری را فعال کنید. در آینده این حالت به‌صورت پیش‌فرض فعال خواهد شد",
+  "{{ userName }} was added to the document": "{{ userName }} به سند اضافه شد",
+  "{{ count }} people added to the document": "{{ count }} کاربر به سند اضافه شدند",
+  "{{ count }} people added to the document_plural": "{{ count }} کاربر به سند اضافه شدند",
+  "{{ count }} groups added to the document": "{{ count }} گروه به سند اضافه شدند",
+  "{{ count }} groups added to the document_plural": "{{ count }} گروه به سند اضافه شدند",
   "Logo": "لوگو",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "نمایش سایدبار",
+  "Collapse sidebar": "پنهان کردن سایدبار",
   "Archived collections": "مجموعه های آرشیو شده",
   "New doc": "سند جدید",
   "Empty": "خالی",
@@ -428,19 +428,19 @@
   "Document not supported – try Markdown, Plain text, HTML, or Word": "نوع سند پشتیبانی نمی‌شود - از Markdown، متن ساده، HTML، یا Word استفاده کنید",
   "Import files": "افزودن فایل",
   "Go back": "بازگشت به عقب",
-  "Go forward": "Go forward",
-  "Could not load shared documents": "Could not load shared documents",
+  "Go forward": "رفتن به جلو",
+  "Could not load shared documents": "امکان بارگذاری اسناد به‌اشتراک گذاشته‌شده وجود ندارد",
   "Shared with me": "به اشتراک گذاشته شده با من",
   "Show more": "اطلاعات بیشتر",
   "Link options": "تنظیمات لینک",
-  "Could not load starred documents": "Could not load starred documents",
+  "Could not load starred documents": "امکان بارگذاری اسناد ستاره دار وجود ندارد",
   "Starred": "ستاره‌دار",
   "Up to date": "به روز",
-  "{{ releasesBehind }} versions behind": "{{ releasesBehind }} version behind",
-  "{{ releasesBehind }} versions behind_plural": "{{ releasesBehind }} versions behind",
+  "{{ releasesBehind }} versions behind": "{{ releasesBehind }} نسخه عقب‌تر است",
+  "{{ releasesBehind }} versions behind_plural": "{{ releasesBehind }} نسخه عقب‌تر است",
   "Change permissions?": "تغییر مجوز ها؟",
-  "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} cannot be moved within {{ parentDocumentName }}",
-  "You can't reorder documents in an alphabetically sorted collection": "You can't reorder documents in an alphabetically sorted collection",
+  "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "امکان جابه‌جایی {{ documentName }} داخل {{ parentDocumentName }} وجود ندارد",
+  "You can't reorder documents in an alphabetically sorted collection": "نمی‌توانید ترتیب اسناد را در مجموعه‌ای که به‌صورت حروف الفبا مرتب شده تغییر دهید",
   "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
   "Return to App": "بازگشت به برنامه",
   "Installation": "نسخه",
