custom emojis for document icons

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -319,6 +319,8 @@
   "Icon Picker": "Icon Picker",
   "Icons": "Icons",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Custom",
   "Remove": "Remove",
   "All": "All",
   "Frequently Used": "Frequently Used",
@@ -666,7 +668,6 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "The document archive is empty at the moment.",
   "Drop documents to import": "Drop documents to import",
@@ -1072,13 +1073,10 @@
   "All roles": "All roles",
   "Admins": "Admins",
   "Editors": "Editors",
-  "Could not load emojis": "Could not load emojis",
-  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
-  "Guests": "Guests",
-  "New Attribute": "New Attribute",
-  "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.",
   "All status": "All status",
   "Active": "Active",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Settings saved",
