--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -481,7 +481,7 @@
   "Image height": "Image height",
   "Height": "Height",
   "Profile picture": "Profile picture",
-  "{{ count }} members": "{{ count }} members",
+  "{{ count }} members": "{{ count }} member",
   "{{ count }} members_plural": "{{ count }} members",
   "Create a new doc": "Create a new doc",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
