--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -15,7 +15,7 @@
   "Import document": "Importera dokument",
   "Sort in sidebar": "Sortera i sidofältet",
   "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
+  "Z-A sort": "Sortera Ö-A",
   "Manual sort": "Manuell sortering",
   "Search in collection": "Sök i samling",
   "Star": "Stjärna",
@@ -209,7 +209,7 @@
   "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection": "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection",
   "Move document": "&Flytta dokument",
   "Moving": "Flyttar",
-  "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Att flytta dokumentet <em>{{ title }}</em> till samlingen {{ newCollectionName }} kommer att ändra behörigheten för alla medlemmar i arbetsytan från <em>{{ prevPermission }}</em> till <em>{{ newPermission }}</em>.",
   "Collections could not be loaded, please reload the app": "Samlingarna kunde inte laddas, ladda om appen",
   "Start view": "Startvy",
   "Install now": "Installera nu",
@@ -337,7 +337,7 @@
   "Mark all as read": "Markera alla som lästa",
   "You're all caught up": "Inga olästa meddelanden",
   "Icon": "Ikon",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "OAuth klient ikon",
   "My App": "Min app",
   "Tagline": "Tagline",
   "A short description": "En kort beskrivning",
@@ -489,7 +489,7 @@
   "Embed": "Bädda in",
   "More options": "Fler alternativ",
   "Rename": "Döp om",
-  "Insert after": "Insert after",
+  "Insert after": "Infoga efter",
   "Insert before": "Insert before",
   "Move up": "Move up",
   "Move down": "Move down",
