fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -481,6 +481,8 @@
   "Image height": "ارتفاع تصویر",
   "Height": "ارتفاع",
   "Profile picture": "تصویر پروفایل",
+  "{{ count }} members": "{{ count }} member",
+  "{{ count }} members_plural": "{{ count }} members",
   "Create a new doc": "ایجاد سند جدید",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} مطلع نخواهد شد، زیرا به این سند دسترسی ندارد",
   "Members of \"{{ groupName }}\" that have access to this document will be notified": "اعضای «{{ groupName }}» که به این سند دسترسی دارند، مطلع خواهند شد",
