fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -291,6 +291,8 @@
   "Filter options": "گزینه‌های فیلتر",
   "Filter": "فیلتر",
   "No results": "بدون نتیجه",
+  "{{ count }} members": "{{ count }} عضو",
+  "{{ count }} members_plural": "{{ count }} عضو",
   "{{authorName}} created <3></3>": "{{authorName}} ایجاد کرد <3></3>",
   "{{authorName}} opened <3></3>": "{{authorName}} باز کرد <3></3>",
   "Search emoji": "جستجوی ایموجی",
@@ -481,8 +483,6 @@
   "Image height": "ارتفاع تصویر",
   "Height": "ارتفاع",
   "Profile picture": "تصویر پروفایل",
-  "{{ count }} members": "{{ count }} member",
-  "{{ count }} members_plural": "{{ count }} members",
   "Create a new doc": "ایجاد سند جدید",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} مطلع نخواهد شد، زیرا به این سند دسترسی ندارد",
   "Members of \"{{ groupName }}\" that have access to this document will be notified": "اعضای «{{ groupName }}» که به این سند دسترسی دارند، مطلع خواهند شد",
@@ -998,8 +998,10 @@
   "Check server logs for more details.": "برای جزئیات بیشتر، لاگ‌های سرور را بررسی کنید.",
   "{{userName}} requested": "{{userName}} درخواست شد",
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "گروه‌ها برای سازمان‌دهی تیم شما هستند. بهترین حالت ایجاد گروه‌ها برای هر کارکرد یا مسئولیت است - برای نمونه «پشتیبانی» یا «مهندسی».",
+  "Optional": "اختیاری",
   "You’ll be able to add people to the group next.": "در ادامه می‌توانید افراد را به گروه اضافه کنید.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "همیشه می‌توانید نام گروه را ویرایش نمایید، ولی این کار ممکن است باعث ابهام هم‌تیمی‌هایتان شود.",
+  "Description": "توضیحات",
   "Disable mentions": "منشن را غیرفعال کن",
   "Prevent this group from being mentionable in documents or comments": "جلوگیری از امکان منشن این گروه در اسناد یا دیدگاه‌ها",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "آیا از این اقدام مطمئن هستید؟ حذف گروه <em>{{groupName}}</em> باعث می‌شود اعضای آن دسترسی خود به مجموعه‌ها و سندهای گروه را از دست بدهند.",
@@ -1020,7 +1022,6 @@
   "No people left to add": "فردی برای افزودن باقی نمانده است",
   "Group admin": "مدیر گروه",
   "Member": "عضو",
-  "Admins": "مدیران",
   "Date created": "تاریخ ایجاد",
   "Crop Image": "برش تصویر",
   "Crop image": "برش تصویر",
@@ -1050,6 +1051,7 @@
   "Domain": "دامنه",
   "Views": "بازدیدها",
   "All roles": "همه نقش‌ها",
+  "Admins": "مدیران",
   "Editors": "ویرایشگران",
   "All status": "همه وضعیت‌ها",
   "Active": "فعال",
@@ -1064,7 +1066,6 @@
   "The logo is displayed at the top left of the application.": "لوگو در بالای سمت چپ برنامه نمایش داده می‌شود.",
   "Workspace logo": "لوگوی فضای کار",
   "The workspace name, usually the same as your company name.": "نام فضای کار، معمولاً همان نام شرکت شماست.",
-  "Description": "توضیحات",
   "A short description of your workspace.": "توضیحات کوتاهی از فضای کار شما.",
   "Theme": "قالب",
   "Customize the interface look and feel.": "سفارشی‌سازی رابط کاربری.",
@@ -1222,7 +1223,6 @@
   "Deleting this version of the document will permanently and irrevocably remove it from the history.": "حذف این نسخه از سند به طور دائمی و غیرقابل برگشت آن را از تاریخچه حذف می کند.",
   "Format": "فرمت",
   "Add option": "افزودن گزینه",
-  "Optional": "اختیاری",
   "Choose a size for your exported document": "انتخاب سایز برای سند خروجی شما",
   "Revision renamed": "نام‌گذاری مجدد ویرایش",
   "Failed to save revision": "ذخیره ویرایش با خطا مواجه شد",
