--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -188,6 +188,8 @@
   "Allow documents within this collection to be shared publicly on the internet.": "Allow documents within this collection to be shared publicly on the internet.",
   "Commenting": "Commenting",
   "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Show Footer Navigation": "Show Footer Navigation",
+  "Show footer navigation on documents within this collection.": "Show footer navigation on documents within this collection.",
   "Saving": "Saving",
   "Save": "Save",
   "Creating": "Creating",
@@ -595,7 +597,6 @@
   "Integrations": "Integrations",
   "API key": "API key",
   "Show path to document": "Show path to document",
-  "Show footer navigation": "Show footer navigation",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
   "Enable viewer insights": "Enable viewer insights",
