fix: New Hebrew translations from Crowdin [ci skip]

--- a/shared/i18n/locales/he_IL/translation.json
+++ b/shared/i18n/locales/he_IL/translation.json
@@ -13,10 +13,10 @@
   "Collection permissions": "הרשאות אוסף",
   "Share this collection": "שיתוף אוסף",
   "Import document": "ייבוא מסמך",
-  "Sort in sidebar": "Sort in sidebar",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Manual sort",
+  "Sort in sidebar": "מיין בתפריט הצד",
+  "A-Z sort": "מיון ת - א",
+  "Z-A sort": "מיון א - ת",
+  "Manual sort": "מיון ידני",
   "Search in collection": "חיפוש בתוך האוסף",
   "Star": "סמן בכוכב",
   "Unstar": "הסר סימון בכוכב",
